[project]
name = "delivery-route-env"
version = "1.0.0"
description = "Delivery Route Optimization OpenEnv"
authors = [{ name="Hemalatha" }]

dependencies = [
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0"
]

[project.scripts]
start = "server.app:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
